k8s/order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-db
  template:
    metadata:
      labels:
        app: orders-db
    spec:
      containers:
        - name: orders-db
          image: mongo
