k8s/order-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: eduardofsamaral/restaurant-orders
