k8s/order-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-db-service
spec:
  selector:
    app: orders-db
  ports:
    - name: orders-db
      protocol: TCP
      port: 27017
      targetPort: 27017
