k8s/restaurants.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurants-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurants
  template:
    metadata:
      labels:
        app: restaurants
    spec:
      containers:
        - name: restaurants
          image: eduardofsamaral/restaurant-restaurants
---
apiVersion: v1
kind: Service
metadata:
  name: restaurants-service
spec:
  selector:
    app: restaurants
  ports:
    - name: restaurants
      protocol: TCP
      port: 3000
      targetPort: 3000
