k8s/users-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - name: users-db
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: users-db-service
spec:
  selector:
    app: users-db
  ports:
    - name: users-db
      protocol: TCP
      port: 5432
      targetPort: 5432
