k8s/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: eduardofsamaral/restaurant-users
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      port: 3000
      targetPort: 3000
